--- a/catalog/view/theme/helium/template/account/address_list.twig
+++ b/catalog/view/theme/helium/template/account/address_list.twig
@@ -3,23 +3,24 @@
 <main role="main" id="account-address">
   {% if success %}<div role="alert" class="alert alert-success"><i class="icon-info"></i> {{ success }}</div>{% endif %}
   {% if error_warning %}<div role="alert" class="alert alert-warning"><i class="icon-alert"></i> {{ error_warning }}</div>{% endif %}
+  
   <h2>{{ text_address_book }}</h2>
   {{ content_top }}
   {% if addresses %}
     <div class="table-responsive">
       <table class="table table-bordered table-hover">
         {% for result in addresses %}
-          <form  action="{{ result.delete }}" method="post" enctype="multipart/form-data" id="form-address-{{ result.address_id }}">
-        <tr>
-          <td class="text-left">{{ result.address }}</td>
-          <td class="text-right">
-            <div class="btn-group">
-              <a href="{{ result.update }}" class="button"><i class="icon-edit"></i>{{ button_edit }}</a>   
-              <a href="{{ result.delete }}" title="{{ button_delete }}" class="button" onclick="return confirm('{{ text_confirm }}')"><i class="icon-trash"></i>{{ button_delete }}</a>
-            </div>
-          </td>
-        </tr>
-        </form>
+          <tr>
+            <form  action="{{ result.delete }}" method="post" enctype="multipart/form-data" id="form-address-{{ result.address_id }}">
+            <td class="text-left">{{ result.address }}</td>
+            <td class="text-right" style="display: flex; justify-content: end">
+              <div class="btn-group">
+                <a href="{{ result.update }}" class="button"><i class="icon-edit"></i>{{ button_edit }}</a>   
+                <a href="{{ result.delete }}" title="{{ button_delete }}" class="button" onclick="return confirm('{{ text_confirm }}')"><i class="icon-trash"></i>{{ button_delete }}</a>
+              </div>
+            </td>
+            </form>
+          </tr>
         {% endfor %}
       </table>
     </div>
