--- a/admin/view/stylesheet/bootstrap.css
+++ b/admin/view/stylesheet/bootstrap.css
@@ -1028,7 +1028,9 @@ figure {
   margin: 0; }
 
 img {
-  vertical-align: middle; }
+  vertical-align: middle;
+  max-width: 100%;
+  }
 
 .img-responsive {
   display: block;
@@ -1049,7 +1051,8 @@ img {
   transition: all 0.2s ease-in-out;
   display: inline-block;
   max-width: 100%;
-  height: auto; }
+  height: auto;
+  }
 
 .img-circle {
   border-radius: 50%; }
