--- a/catalog/view/theme/helium/template/checkout/register.twig
+++ b/catalog/view/theme/helium/template/checkout/register.twig
@@ -50,8 +50,8 @@
   </div>
 {% if shipping_required %}
   <div class="form-control">
-    <input type="checkbox" name="shipping_address" value="1" checked="checked" id="shipping_required" />
-    <label for="shipping_required">{{ entry_shipping }}</label>
+    <input type="checkbox" name="shipping_address" value="1" checked="checked" id="same_shipping_and_payment" />
+    <label for="same_shipping_and_payment">{{ entry_shipping }}</label>
   </div>
 {% endif %}
 {% if text_agree %}
